[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Login.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="UserName" type="LineEdit" parent="."]
margin_left = 64.0
margin_top = 144.0
margin_right = 306.0
margin_bottom = 188.0
align = 1

[node name="Password" type="LineEdit" parent="."]
margin_left = 384.0
margin_top = 144.0
margin_right = 626.0
margin_bottom = 188.0
align = 1
secret = true

[node name="Email tag" type="Label" parent="."]
margin_left = 120.0
margin_top = 112.0
margin_right = 248.0
margin_bottom = 144.0
text = "Email"
align = 1
valign = 1

[node name="Password tag" type="Label" parent="."]
margin_left = 440.0
margin_top = 112.0
margin_right = 568.0
margin_bottom = 144.0
text = "Password
"
align = 1
valign = 1

[node name="Login" type="Button" parent="."]
margin_left = 96.0
margin_top = 208.0
margin_right = 288.0
margin_bottom = 256.0
text = "Login"

[node name="Register" type="Button" parent="."]
margin_left = 408.0
margin_top = 208.0
margin_right = 600.0
margin_bottom = 256.0
text = "Registrar"

[node name="ForgotPassword" type="Button" parent="."]
margin_left = 96.0
margin_top = 272.0
margin_right = 288.0
margin_bottom = 320.0
text = "Esqueceu sua senha?"

[node name="GetScores" type="Button" parent="."]
margin_left = 704.0
margin_top = 144.0
margin_right = 896.0
margin_bottom = 192.0
text = "Get Scores"

[node name="UpdateScore" type="Button" parent="."]
margin_left = 704.0
margin_top = 208.0
margin_right = 896.0
margin_bottom = 256.0
text = "Update Score"

[node name="GetTopScores" type="Button" parent="."]
margin_left = 704.0
margin_top = 272.0
margin_right = 896.0
margin_bottom = 320.0
text = "Get Top 3 Scores"

[node name="DeleteRecord" type="Button" parent="."]
margin_left = 704.0
margin_top = 336.0
margin_right = 896.0
margin_bottom = 384.0
text = "Delete Record"

[node name="RemoveUser" type="Button" parent="."]
margin_left = 704.0
margin_top = 400.0
margin_right = 896.0
margin_bottom = 448.0
text = "Remove User"

[connection signal="button_up" from="Login" to="." method="_on_Login_button_up"]
[connection signal="button_up" from="Register" to="." method="_on_Register_button_up"]
[connection signal="button_up" from="ForgotPassword" to="." method="_on_ForgotPassword_button_up"]
[connection signal="button_up" from="GetScores" to="." method="_on_GetScores_button_up"]
[connection signal="button_up" from="UpdateScore" to="." method="_on_UpdateScore_button_up"]
[connection signal="button_up" from="GetTopScores" to="." method="_on_GetTopScores_button_up"]
[connection signal="button_up" from="DeleteRecord" to="." method="_on_DeleteRecord_button_up"]
[connection signal="button_up" from="RemoveUser" to="." method="_on_RemoveUser_button_up"]
